...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell1"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell1"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell2"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell2"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell4"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell4"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell7"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell7"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell8"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell8"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cell9"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cell9"
                    android:maxLength="2"
                    android:paddingTop="1dp"
                    android:singleLine="true"
...


        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
